tests/negative/gold/merge-types-test.gold
tests/negative/merge-types-test.toit:10:5: error: Class 'int' does not have any method 'foo'
  x.foo
    ^~~
Class 'int' does not have any method 'foo'.
  0: main                      tests/negative/merge-types-test.toit:10:5
